created the profile update page and list users in table in assistant_directors page

--- a/templates/base/topnav.html
+++ b/templates/base/topnav.html
@@ -120,8 +120,8 @@
           </div>
         </li>
         <li class="nav-item nav-logout d-none d-lg-block">
-          <a class="nav-link" href="index.html">
-            <i class="mdi mdi-home-circle"></i>
+          <a class="nav-link" href="{% url 'logout_page' %}">
+            <i class="mdi mdi-logout"></i>
           </a>
         </li>
       </ul>
