--- a/templates/base/sidenav.html
+++ b/templates/base/sidenav.html
@@ -1,92 +1,81 @@
-
 {% load static %}
+
+
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
-    <ul class="nav">
-      <li class="nav-item nav-profile border-bottom">
-        <a href="#" class="nav-link flex-column">
-          <div class="nav-profile-image">
-            <img src="{% static 'assets/images/faces/face1.jpg' %}" alt="profile" />
-            <!--change to offline or busy as needed-->
-          </div>
-          <div class="nav-profile-text d-flex ml-0 mb-3 flex-column">
-            <span class="font-weight-semibold mb-1 mt-2 text-center">Antonio Olson</span>
-            <span class="text-secondary icon-sm text-center">$3499.00</span>
-          </div>
-        </a>
-      </li>
-      <li class="nav-item pt-3">
-        <a class="nav-link d-block" href="index.html">
-          <img class="sidebar-brand-logo" src="../assets/images/logo.svg" alt="" />
-          <img class="sidebar-brand-logomini" src="../assets/images/logo-mini.svg" alt="" />
-          <div class="small font-weight-light pt-1">Responsive Dashboard</div>
-        </a>
-        <form class="d-flex align-items-center" action="#">
-          <div class="input-group">
-            <div class="input-group-prepend">
-              <i class="input-group-text border-0 mdi mdi-magnify"></i>
-            </div>
-            <input type="text" class="form-control border-0" placeholder="Search" />
-          </div>
-        </form>
-      </li>
-      <li class="pt-2 pb-1">
-        <span class="nav-item-head">Template Pages</span>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link"  href="{% url 'ad_create_account' %}" >
-          <i class="mdi mdi-account-multiple menu-icon"></i>
-          <span class="menu-title">Manage Accounts</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
-          <i class="mdi mdi-account-multiple menu-icon"></i>
-          <span class="menu-title">Manage Accounts</span>
-          <i class="menu-arrow"></i>
-        </a>
-        <div class="collapse" id="ui-basic">
-          <ul class="nav flex-column sub-menu">
-            <li class="nav-item">
-              <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="pages/ui-features/dropdowns.html">Dropdowns</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="pages/ui-features/typography.html">Typography</a>
-            </li>
-          </ul>
+  <ul class="nav">
+    <li class="nav-item nav-profile border-bottom">
+      <a href="{% url 'ad_profile' %}" class="nav-link flex-column">
+        <div class="nav-profile-image">
+          <img src="{{ user.profilePicture.url }}" alt="profile" />
+          <!--change to offline or busy as needed-->
         </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="pages/icons/mdi.html">
-          <i class="mdi mdi-contacts menu-icon"></i>
-          <span class="menu-title">Icons</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="pages/forms/basic_elements.html">
-          <i class="mdi mdi-format-list-bulleted menu-icon"></i>
-          <span class="menu-title">Forms</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="pages/charts/chartjs.html">
-          <i class="mdi mdi-chart-bar menu-icon"></i>
-          <span class="menu-title">Charts</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="pages/tables/basic-table.html">
-          <i class="mdi mdi-table-large menu-icon"></i>
-          <span class="menu-title">Tables</span>
-        </a>
-      </li>
-      <li class="nav-item pt-3">
-        <a class="nav-link" href="http://bootstrapdash.com/demo/plus-free/documentation/documentation.html" target="_blank">
-          <i class="mdi mdi-file-document-box menu-icon"></i>
-          <span class="menu-title">Documentation</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+        <div class="nav-profile-text d-flex ml-0 mb-3 flex-column">
+          <span class="font-weight-semibold mb-1 mt-2 text-center">{{ user.firstName}} {{ user.lastName}}</span>
+          <span class="text-secondary icon-sm text-center">{{ user.role }}</span>
+        </div>
+      </a>
+    </li>
+    <!-- <li class="nav-item pt-3">
+      <a class="nav-link d-block" href="index.html">
+        <img class="sidebar-brand-logo" src="../assets/images/logo.svg" alt="" />
+        <img class="sidebar-brand-logomini" src="../assets/images/logo-mini.svg" alt="" />
+        <div class="small font-weight-light pt-1">Responsive Dashboard</div>
+      </a>
+      <form class="d-flex align-items-center" action="#">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <i class="input-group-text border-0 mdi mdi-magnify"></i>
+          </div>
+          <input type="text" class="form-control border-0" placeholder="Search" />
+        </div>
+      </form>
+    </li> -->
+    <li class="pt-2 pb-1">
+      <span class="nav-item-head">Template Pages</span>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link"  href="{% url 'ad_home_page' %}" >
+        <i class="mdi mdi-view-dashboard menu-icon"></i>
+        <span class="menu-title">Home Page </span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link"  href="{% url 'ad_create_account' %}" >
+        <i class="mdi mdi-account-multiple menu-icon"></i>
+        <span class="menu-title">Manage Accounts</span>
+      </a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link" href="pages/icons/mdi.html">
+        <i class="mdi mdi-contacts menu-icon"></i>
+        <span class="menu-title">Icons</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="pages/forms/basic_elements.html">
+        <i class="mdi mdi-format-list-bulleted menu-icon"></i>
+        <span class="menu-title">Forms</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="pages/charts/chartjs.html">
+        <i class="mdi mdi-chart-bar menu-icon"></i>
+        <span class="menu-title">Charts</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="pages/tables/basic-table.html">
+        <i class="mdi mdi-table-large menu-icon"></i>
+        <span class="menu-title">Tables</span>
+      </a>
+    </li>
+    <li class="nav-item pt-3">
+      <a class="nav-link" href="http://bootstrapdash.com/demo/plus-free/documentation/documentation.html" target="_blank">
+        <i class="mdi mdi-file-document-box menu-icon"></i>
+        <span class="menu-title">Documentation</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+
