--- a/static/scrolls.css
+++ b/static/scrolls.css
@@ -2,6 +2,9 @@
     height: 60vh;
     overflow-y: scroll;
     position: sticky;
-    background-color: rgb(24, 24, 24);
-    margin-bottom: 180px;
+    background-color: rgb(175, 175, 233);
+    margin-bottom: 20px;
+    overflow:auto;
+    flex-direction: column-reverse;
+    
 }
