--- a/templates/base/sidenav.html
+++ b/templates/base/sidenav.html
@@ -15,7 +15,7 @@
       </a>
     </li>
     <li class="pt-2 pb-1">
-      <span class="nav-item-head">Template Pages</span>
+      <span class="nav-item-head">Navigation</span>
     </li>
     <li class="nav-item">
       <a class="nav-link"  href="{% url 'ad_home_page' %}" >
@@ -81,7 +81,7 @@
       </a>
     </li>
     <li class="pt-2 pb-1">
-      <span class="nav-item-head">Template Pages</span>
+      <span class="nav-item-head">Navigation</span>
     </li>
     <li class="nav-item">
       <a class="nav-link"  href="{% url 'dr_home_page' %}" >
@@ -141,13 +141,13 @@
           <!--change to offline or busy as needed-->
         </div>
         <div class="nav-profile-text d-flex ml-0 mb-3 flex-column">
-          <span class="font-weight-semibold mb-1 mt-2 text-center">sssssss{{ user.firstName}} {{ user.lastName}}</span>
+          <span class="font-weight-semibold mb-1 mt-2 text-center">{{ user.firstName}} {{ user.lastName}}</span>
           <span class="text-secondary icon-sm text-center">{{ user.role }}</span>
         </div>
       </a>
     </li>
     <li class="pt-2 pb-1">
-      <span class="nav-item-head">Template Pages</span>
+      <span class="nav-item-head">Navigation</span>
     </li>
     <li class="nav-item">
       <a class="nav-link"  href="{% url 'tl_home_page' %}" >
@@ -195,4 +195,68 @@
   </ul>
 </nav>
 
+{% elif user.role.id == 4 %}
+
+<nav class="sidebar sidebar-offcanvas" id="sidebar">
+  <ul class="nav">
+    <li class="nav-item nav-profile border-bottom">
+      <a href="{% url 'exp_profile' %}" class="nav-link flex-column">
+        <div class="nav-profile-image">
+          <img src="{{ user.profilePicture.url }}" alt="profile" />
+          <!--change to offline or busy as needed-->
+        </div>
+        <div class="nav-profile-text d-flex ml-0 mb-3 flex-column">
+          <span class="font-weight-semibold mb-1 mt-2 text-center">ssssssss{{ user.firstName}} {{ user.lastName}}</span>
+          <span class="text-secondary icon-sm text-center">{{ user.role }}</span>
+        </div>
+      </a>
+    </li>
+    <li class="pt-2 pb-1">
+      <span class="nav-item-head">Navigation</span>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link"  href="{% url 'tl_home_page' %}" >
+        <i class="mdi mdi-view-dashboard menu-icon"></i>
+        <span class="menu-title">Home Page </span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link"  href="{% url 'exp_manage_projects' %}" >
+        <i class="mdi mdi-account-multiple menu-icon"></i>
+        <span class="menu-title">Manage Projects</span>
+      </a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link" href="">
+        <i class="mdi mdi-contacts menu-icon"></i>
+        <span class="menu-title">Icons</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="pages/forms/basic_elements.html">
+        <i class="mdi mdi-format-list-bulleted menu-icon"></i>
+        <span class="menu-title">Forms</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="pages/charts/chartjs.html">
+        <i class="mdi mdi-chart-bar menu-icon"></i>
+        <span class="menu-title">Charts</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="pages/tables/basic-table.html">
+        <i class="mdi mdi-table-large menu-icon"></i>
+        <span class="menu-title">Tables</span>
+      </a>
+    </li>
+    <li class="nav-item pt-3">
+      <a class="nav-link" href="http://bootstrapdash.com/demo/plus-free/documentation/documentation.html" target="_blank">
+        <i class="mdi mdi-file-document-box menu-icon"></i>
+        <span class="menu-title">Documentation</span>
+      </a>
+    </li>
+  </ul>
+</nav>
 {% endif %}
