--- a/templates/base/sidenav.html
+++ b/templates/base/sidenav.html
@@ -97,9 +97,9 @@
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="pages/icons/mdi.html">
+      <a class="nav-link" href="{% url 'dr_project_archive' %}">
         <i class="mdi mdi-contacts menu-icon"></i>
-        <span class="menu-title">Icons</span>
+        <span class="menu-title">Projects Archive</span>
       </a>
     </li>
     <li class="nav-item">
@@ -220,6 +220,7 @@
         <span class="menu-title">Home Page </span>
       </a>
     </li>
+
     <li class="nav-item">
       <a class="nav-link"  href="{% url 'exp_manage_projects' %}" >
         <i class="mdi mdi-account-multiple menu-icon"></i>
@@ -227,12 +228,8 @@
       </a>
     </li>
 
-    <li class="nav-item">
-      <a class="nav-link" href="">
-        <i class="mdi mdi-contacts menu-icon"></i>
-        <span class="menu-title">Icons</span>
-      </a>
-    </li>
+
+
     <li class="nav-item">
       <a class="nav-link" href="pages/forms/basic_elements.html">
         <i class="mdi mdi-format-list-bulleted menu-icon"></i>
