done with all the heirarchical message sending an approval as well as profile editing and made the project assigning from team to experts as whole: before the team leader selects an expert but now as a boolean value it is choosen to forward to the every expert in that team

--- a/director/templates/director/profile.html
+++ b/director/templates/director/profile.html
@@ -1,6 +1,6 @@
 {% extends "base/index.html" %} 
 {% load static %}
-
+{% load crispy_forms_filters %}
 
 {% block content %}
 
@@ -17,7 +17,7 @@
         <div class="card-body">
         
 
-<div class="container rounded bg-white mt-5 mb-5">
+<div class="container rounded bg-white mt-2 mb-5">
     <div class="row">
         <div class="col-md-3 border-right">
             <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="{{ user.profilePicture.url }}"><span class="font-weight-bold">{{ user.firstName }}</span><span class="text-black-50">{{ user.email }}</span><span> </span></div>
@@ -27,21 +27,13 @@
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <h4 class="text-right">Profile Settings</h4>
                 </div>
-                <div class="row mt-2">
-                    <div class="col-md-6"><label class="labels">Name</label><input type="text" class="form-control" placeholder="first name" value="{{ user.firstName }}"></div>
-                    <div class="col-md-6"><label class="labels">Surname</label><input type="text" class="form-control" value="{{ user.lastName }}" placeholder="surname"></div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-md-12"><label class="labels">Email</label><input type="email" class="form-control" placeholder="Enter Valid a Email" value="{{ user.email }}"></div>
-                    <div class="col-md-12"><label class="labels">Phone Number</label><input type="text" class="form-control" placeholder="Input a valid phone number" value="{{ user.phone }}"></div>
-                    <div class="col-md-12"><label class="labels">Gender</label><input type="text" class="form-control" placeholder="Input Male/Female" value="{{ user.gender }}"></div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-md-12"><label class="labels">Role</label><input type="text" class="form-control" placeholder="Your role in this organization" value="{{ user.role }}"></div>
-                    <div class="col-md-12"><label class="labels">Team</label><input type="text" class="form-control" value="{{ user.team }}" placeholder="Which team are you a part of"></div>
-                </div>
-                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save Profile</button></div>
-            </div>
+                <form method="POST" enctype="multipart/form-data">
+                  {% csrf_token %}
+                {{ form|crispy }}
+                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="submit">Save Profile</button></div>
+           
+              </form>
+               </div>
         </div>
         <!-- <div class="col-md-4">
             <div class="p-3 py-5">
