--- a/director/templates/director/manage_projects.html
+++ b/director/templates/director/manage_projects.html
@@ -29,7 +29,7 @@
                 <thead>
                   <tr>
                     <th>Title</th>
-                    <th>Dead Line</th>
+                    <th>Deadline</th>
                     <th>Assigned Team</th>
                     <th>Urgency</th>
                   </tr>
