--- a/experts/templates/experts/project_detail.html
+++ b/experts/templates/experts/project_detail.html
@@ -11,7 +11,7 @@
       <div class="card">
         <div class="card-header">
           <div class="card-title">
-            View or Update your Project here!
+            View your Project here!
           </div>
         </div>
         <div class="card-body">
@@ -26,22 +26,19 @@
           <form  novalidate method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form|crispy }}
-            <input
-            type="submit"
-            class="mr-auto ml-4  btn btn-success"
-            name="submit"
-            value="Update Project"
-            />
+     
+
           </form>
+
         </div>
 
         <div class="col-md-2">
-            <input
-            type=""
-            class="mr-auto ml-4  btn btn-danger"
-            data-toggle="modal" data-target="#exampleModal" 
-            value="Delete Project"
-            />
+
+            <h5>Project file</h5>
+            <div class="table-responsive">
+              <a href="/media/{{ obj.projectFile }}"><img class="" style="width: 50px;" src="{% static 'file.png' %}" alt="Attached File Icon">
+              </a>  
+            </div>
     
         </div>
   
