--- a/team_leader/templates/team_leader/manage_projects.html
+++ b/team_leader/templates/team_leader/manage_projects.html
@@ -28,7 +28,8 @@
                 <thead>
                   <tr>
                     <th>Title</th>
-                    <th>Dead Line</th>
+                    <th>Deadline</th>
+                    <th> Director </th>
                     <th>Assigned Expert</th>
                     <th>Urgency</th>
                   </tr>
@@ -36,7 +37,7 @@
                 <tbody>
                   {% for list in lists %}
                   <tr>
-                    <td><a href="{% url 'tl_team_project_messages' list.pk  list.assignedTeam %}">{{ list.projectTitle }}</a></td>
+                    <td><a href="{% url 'tl_project_detail' list.id %}">{{ list.projectTitle }}</a></td>
                     {% if list.deadLine > date %}
                     <td>{{ list.deadLine }}</td>
                     {% else %}
@@ -44,12 +45,14 @@
                       <label class="badge badge-danger">Late</label>
                     </td>
                     {% endif %} 
+                    <td><a href="{% url 'tl_team_project_messages' list.pk  list.assignedTeam %}">{{ list.created_by }}</a></td>
+
                     <td>
-                      {% if list.assignedExpert %}
-                      <a href="{% url 'tl_project_messages' list.pk  list.assignedExpert %}">{{ list.assignedExpert }}</a>
+                      {% if list.assignToExperts %}
+                      <a href="{% url 'tl_project_messages' list.pk   %}">{{ list.assignToExperts }}</a>
 
                       {% else %}
-                      <a href="{% url 'tl_assign_project' list.pk %}">{{ list.assignedExpert }}</a>
+                      <a href="{% url 'tl_assign_project' list.pk %}">{{ list.assignToExperts }}</a>
 
                       {% endif %}
                     </td>
