--- a/templates/base/sidenav.html
+++ b/templates/base/sidenav.html
@@ -69,7 +69,7 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
   <ul class="nav">
     <li class="nav-item nav-profile border-bottom">
-      <a href="{% url 'dr_profile' %}" class="nav-link flex-column">
+      <a href="{% url 'dr_profile'  %}" class="nav-link flex-column">
         <div class="nav-profile-image">
           <img src="{{ user.profilePicture.url }}" alt="profile" />
           <!--change to offline or busy as needed-->
@@ -162,10 +162,11 @@
       </a>
     </li>
 
+
     <li class="nav-item">
-      <a class="nav-link" href="">
+      <a class="nav-link" href="{% url 'tl_project_archive' %}">
         <i class="mdi mdi-contacts menu-icon"></i>
-        <span class="menu-title">Icons</span>
+        <span class="menu-title">Projects Archive</span>
       </a>
     </li>
     <li class="nav-item">
@@ -206,7 +207,7 @@
           <!--change to offline or busy as needed-->
         </div>
         <div class="nav-profile-text d-flex ml-0 mb-3 flex-column">
-          <span class="font-weight-semibold mb-1 mt-2 text-center">ssssssss{{ user.firstName}} {{ user.lastName}}</span>
+          <span class="font-weight-semibold mb-1 mt-2 text-center">{{ user.firstName}} {{ user.lastName}}</span>
           <span class="text-secondary icon-sm text-center">{{ user.role }}</span>
         </div>
       </a>
@@ -228,7 +229,12 @@
       </a>
     </li>
 
-
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'exp_project_archive' %}">
+        <i class="mdi mdi-contacts menu-icon"></i>
+        <span class="menu-title">Projects Archive</span>
+      </a>
+    </li>
 
     <li class="nav-item">
       <a class="nav-link" href="pages/forms/basic_elements.html">
