--- a/templates/base/sidenav.html
+++ b/templates/base/sidenav.html
@@ -30,12 +30,22 @@
       </a>
     </li>
 
+
     <li class="nav-item">
-      <a class="nav-link" href="pages/icons/mdi.html">
+      <a class="nav-link" href="{% url 'ad_manage_reports' %}">
         <i class="mdi mdi-contacts menu-icon"></i>
-        <span class="menu-title">Icons</span>
+        <span class="menu-title">Manage Reports</span>
       </a>
     </li>
+
+
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'ad_report_archive' %}">
+        <i class="mdi mdi-contacts menu-icon"></i>
+        <span class="menu-title">Reports Archive</span>
+      </a>
+    </li>
+
     <li class="nav-item">
       <a class="nav-link" href="pages/forms/basic_elements.html">
         <i class="mdi mdi-format-list-bulleted menu-icon"></i>
@@ -102,12 +112,21 @@
         <span class="menu-title">Projects Archive</span>
       </a>
     </li>
+
     <li class="nav-item">
-      <a class="nav-link" href="pages/forms/basic_elements.html">
-        <i class="mdi mdi-format-list-bulleted menu-icon"></i>
-        <span class="menu-title">Forms</span>
+      <a class="nav-link" href="{% url 'dr_manage_reports' %}">
+        <i class="mdi mdi-contacts menu-icon"></i>
+        <span class="menu-title">Manage Reports</span>
       </a>
     </li>
+
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'dr_report_archive' %}">
+        <i class="mdi mdi-contacts menu-icon"></i>
+        <span class="menu-title">Reports Archive</span>
+      </a>
+    </li>
+
     <li class="nav-item">
       <a class="nav-link" href="pages/charts/chartjs.html">
         <i class="mdi mdi-chart-bar menu-icon"></i>
@@ -169,16 +188,11 @@
         <span class="menu-title">Projects Archive</span>
       </a>
     </li>
+
     <li class="nav-item">
-      <a class="nav-link" href="pages/forms/basic_elements.html">
-        <i class="mdi mdi-format-list-bulleted menu-icon"></i>
-        <span class="menu-title">Forms</span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="pages/charts/chartjs.html">
-        <i class="mdi mdi-chart-bar menu-icon"></i>
-        <span class="menu-title">Charts</span>
+      <a class="nav-link" href="{% url 'tl_manage_reports' %}">
+        <i class="mdi mdi-contacts menu-icon"></i>
+        <span class="menu-title">Manage Reports</span>
       </a>
     </li>
     <li class="nav-item">
