--- a/team_leader/templates/team_leader/project_detail.html
+++ b/team_leader/templates/team_leader/project_detail.html
@@ -38,12 +38,13 @@
         </div>
 
         <div class="col-md-2">
-
+            {% if obj.projectFile %}
             <h5>Project file</h5>
             <div class="table-responsive">
               <a href="/media/{{ obj.projectFile }}"><img class="" style="width: 50px;" src="{% static 'file.png' %}" alt="Attached File Icon">
               </a>  
             </div>
+            {% endif %}
     
         </div>
   
