--- a/templates/base/sidenav.html
+++ b/templates/base/sidenav.html
@@ -17,12 +17,12 @@
     <li class="pt-2 pb-1">
       <span class="nav-item-head">Navigation</span>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link"  href="{% url 'ad_home_page' %}" >
         <i class="mdi mdi-view-dashboard menu-icon"></i>
         <span class="menu-title">Home Page </span>
       </a>
-    </li>
+    </li> -->
     <li class="nav-item">
       <a class="nav-link"  href="{% url 'ad_manage_accounts' %}" >
         <i class="mdi mdi-account-multiple menu-icon"></i>
@@ -33,7 +33,7 @@
 
     <li class="nav-item">
       <a class="nav-link" href="{% url 'ad_manage_reports' %}">
-        <i class="mdi mdi-contacts menu-icon"></i>
+        <i class="mdi mdi-message-text-outline menu-icon"></i>
         <span class="menu-title">Manage Reports</span>
       </a>
     </li>
@@ -41,35 +41,13 @@
 
     <li class="nav-item">
       <a class="nav-link" href="{% url 'ad_report_archive' %}">
-        <i class="mdi mdi-contacts menu-icon"></i>
+        <i class="mdi mdi-archive menu-icon"></i>
         <span class="menu-title">Reports Archive</span>
       </a>
     </li>
 
-    <li class="nav-item">
-      <a class="nav-link" href="pages/forms/basic_elements.html">
-        <i class="mdi mdi-format-list-bulleted menu-icon"></i>
-        <span class="menu-title">Forms</span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="pages/charts/chartjs.html">
-        <i class="mdi mdi-chart-bar menu-icon"></i>
-        <span class="menu-title">Charts</span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="pages/tables/basic-table.html">
-        <i class="mdi mdi-table-large menu-icon"></i>
-        <span class="menu-title">Tables</span>
-      </a>
-    </li>
-    <li class="nav-item pt-3">
-      <a class="nav-link" href="http://bootstrapdash.com/demo/plus-free/documentation/documentation.html" target="_blank">
-        <i class="mdi mdi-file-document-box menu-icon"></i>
-        <span class="menu-title">Documentation</span>
-      </a>
-    </li>
+
+ 
   </ul>
 </nav>
 
@@ -93,58 +71,41 @@
     <li class="pt-2 pb-1">
       <span class="nav-item-head">Navigation</span>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link"  href="{% url 'dr_home_page' %}" >
         <i class="mdi mdi-view-dashboard menu-icon"></i>
         <span class="menu-title">Home Page </span>
       </a>
-    </li>
+    </li> -->
     <li class="nav-item">
       <a class="nav-link"  href="{% url 'dr_manage_projects' %}" >
-        <i class="mdi mdi-account-multiple menu-icon"></i>
+        <i class="mdi mdi-projector-screen menu-icon"></i>
         <span class="menu-title">Manage Projects</span>
       </a>
     </li>
 
     <li class="nav-item">
       <a class="nav-link" href="{% url 'dr_project_archive' %}">
-        <i class="mdi mdi-contacts menu-icon"></i>
+        <i class="mdi mdi-archive menu-icon"></i>
         <span class="menu-title">Projects Archive</span>
       </a>
     </li>
 
     <li class="nav-item">
       <a class="nav-link" href="{% url 'dr_manage_reports' %}">
-        <i class="mdi mdi-contacts menu-icon"></i>
+        <i class="mdi mdi-message-text-outline menu-icon"></i>
         <span class="menu-title">Manage Reports</span>
       </a>
     </li>
 
     <li class="nav-item">
       <a class="nav-link" href="{% url 'dr_report_archive' %}">
-        <i class="mdi mdi-contacts menu-icon"></i>
+        <i class="mdi mdi-archive menu-icon"></i>
         <span class="menu-title">Reports Archive</span>
       </a>
     </li>
 
-    <li class="nav-item">
-      <a class="nav-link" href="pages/charts/chartjs.html">
-        <i class="mdi mdi-chart-bar menu-icon"></i>
-        <span class="menu-title">Charts</span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="pages/tables/basic-table.html">
-        <i class="mdi mdi-table-large menu-icon"></i>
-        <span class="menu-title">Tables</span>
-      </a>
-    </li>
-    <li class="nav-item pt-3">
-      <a class="nav-link" href="http://bootstrapdash.com/demo/plus-free/documentation/documentation.html" target="_blank">
-        <i class="mdi mdi-file-document-box menu-icon"></i>
-        <span class="menu-title">Documentation</span>
-      </a>
-    </li>
+  
   </ul>
 </nav>
 
@@ -168,15 +129,15 @@
     <li class="pt-2 pb-1">
       <span class="nav-item-head">Navigation</span>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link"  href="{% url 'tl_home_page' %}" >
         <i class="mdi mdi-view-dashboard menu-icon"></i>
         <span class="menu-title">Home Page </span>
       </a>
-    </li>
+    </li> -->
     <li class="nav-item">
       <a class="nav-link"  href="{% url 'tl_manage_projects' %}" >
-        <i class="mdi mdi-account-multiple menu-icon"></i>
+        <i class="mdi mdi-projector-screen menu-icon"></i>
         <span class="menu-title">Manage Projects</span>
       </a>
     </li>
@@ -184,29 +145,27 @@
 
     <li class="nav-item">
       <a class="nav-link" href="{% url 'tl_project_archive' %}">
-        <i class="mdi mdi-contacts menu-icon"></i>
+        <i class="mdi mdi-archive menu-icon"></i>
         <span class="menu-title">Projects Archive</span>
       </a>
     </li>
 
     <li class="nav-item">
       <a class="nav-link" href="{% url 'tl_manage_reports' %}">
-        <i class="mdi mdi-contacts menu-icon"></i>
+        <i class="mdi mdi-message-text-outline menu-icon"></i>
         <span class="menu-title">Manage Reports</span>
       </a>
     </li>
+
+
     <li class="nav-item">
-      <a class="nav-link" href="pages/tables/basic-table.html">
-        <i class="mdi mdi-table-large menu-icon"></i>
-        <span class="menu-title">Tables</span>
+      <a class="nav-link" href="{% url 'tl_report_archive' %}">
+        <i class="mdi mdi-archive menu-icon"></i>
+        <span class="menu-title">Reports Archive</span>
       </a>
     </li>
-    <li class="nav-item pt-3">
-      <a class="nav-link" href="http://bootstrapdash.com/demo/plus-free/documentation/documentation.html" target="_blank">
-        <i class="mdi mdi-file-document-box menu-icon"></i>
-        <span class="menu-title">Documentation</span>
-      </a>
-    </li>
+
+  
   </ul>
 </nav>
 
@@ -229,51 +188,40 @@
     <li class="pt-2 pb-1">
       <span class="nav-item-head">Navigation</span>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link"  href="{% url 'tl_home_page' %}" >
         <i class="mdi mdi-view-dashboard menu-icon"></i>
         <span class="menu-title">Home Page </span>
       </a>
-    </li>
+    </li> -->
 
     <li class="nav-item">
       <a class="nav-link"  href="{% url 'exp_manage_projects' %}" >
-        <i class="mdi mdi-account-multiple menu-icon"></i>
+        <i class="mdi mdi-projector-screen menu-icon"></i>
         <span class="menu-title">Manage Projects</span>
       </a>
     </li>
 
     <li class="nav-item">
       <a class="nav-link" href="{% url 'exp_project_archive' %}">
-        <i class="mdi mdi-contacts menu-icon"></i>
+        <i class="mdi mdi-archive menu-icon"></i>
         <span class="menu-title">Projects Archive</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'exp_manage_reports' %}">
+        <i class="mdi mdi-message-text-outline menu-icon"></i>
+        <span class="menu-title">Manage Reports</span>
       </a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="pages/forms/basic_elements.html">
-        <i class="mdi mdi-format-list-bulleted menu-icon"></i>
-        <span class="menu-title">Forms</span>
+      <a class="nav-link" href="{% url 'exp_report_archive' %}">
+        <i class="mdi mdi-archive menu-icon"></i>
+        <span class="menu-title">Reports Archive</span>
       </a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="pages/charts/chartjs.html">
-        <i class="mdi mdi-chart-bar menu-icon"></i>
-        <span class="menu-title">Charts</span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="pages/tables/basic-table.html">
-        <i class="mdi mdi-table-large menu-icon"></i>
-        <span class="menu-title">Tables</span>
-      </a>
-    </li>
-    <li class="nav-item pt-3">
-      <a class="nav-link" href="http://bootstrapdash.com/demo/plus-free/documentation/documentation.html" target="_blank">
-        <i class="mdi mdi-file-document-box menu-icon"></i>
-        <span class="menu-title">Documentation</span>
-      </a>
-    </li>
+
   </ul>
 </nav>
 {% endif %}
