just a preparation to publish on heroku

--- a/authentication/templates/authentication/index.html
+++ b/authentication/templates/authentication/index.html
@@ -30,7 +30,7 @@
       {% csrf_token %}
 
       <div class="text-center mb-4">
-        <img class="mb-4" src="{% static 'era.png' %}" alt="" width="72" height="72">
+        <!-- <img class="mb-4" src="{% static 'era.png' %}" alt="" width="72" height="72"> -->
         <h1 class="h3 mb-3 font-weight-normal">ICT CENTER</h1>
       </div>
 
