--- a/templates/base/topnav.html
+++ b/templates/base/topnav.html
@@ -8,11 +8,14 @@
       </div>
      
 
+
  
 
       <ul class="navbar-nav navbar-nav-right">
-   
+        <div id="google_translate_element"></div> 
+
         <li class="nav-item nav-profile dropdown d-none d-md-block">
+
           <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
             <div class="nav-profile-text">English </div>
           </a>
