--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -30,9 +30,21 @@
     <link rel="shortcut icon" href="{% static 'icon.svg' %}" />
     <link rel="stylesheet" href="{% static 'scrolls.css' %}">
     
-
+    <script type="text/javascript" src=
+    "https://translate.google.com/translate_a/element.js?
+            cb=googleTranslateElementInit">
+        </script> 
+            <script type="text/javascript"> 
+              function googleTranslateElementInit() { 
+                  new google.translate.TranslateElement(
+                      {pageLanguage: 'en'}, 
+                      'google_translate_element'
+                  ); 
+              } 
+          </script> 
   </head>
   <body>
+
 
     <div class="container-scroller">
       <!-- partial:partials/_sidebar.html -->
